<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenreActivity">

    <LinearLayout
        android:id="@+id/fullLayoutMovies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/headLayoutMovies"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@color/lightgrey">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/back_button"
                android:background="?attr/selectableItemBackgroundBorderless"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/titleMovies"
                android:layout_width="236dp"
                android:layout_height="match_parent"
                android:paddingLeft="50dp"
                android:paddingTop="22dp"
                android:text="@string/addMovieTitle"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/iconMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                app:srcCompat="@drawable/mdb_logo"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sectionLayoutMovies"
            android:layout_width="match_parent"
            android:layout_height="475dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/addMovieSaveButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/darkblue"
                android:text="@string/addButton"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userTitleMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Title" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Description" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userRegisseur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Regisseur" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userActor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Actors" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Length" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userGenre2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Genre" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Youtubelink" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Genre" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/footerLayoutMovies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightgrey"
            android:orientation="vertical">

            <TextView
                android:id="@+id/footerStuffMovies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="12dp"
                android:text="@string/footerStuff"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>